# dirtywave-updater-releases-mirror

./: .gitattributes  .gitconfig  .gitignore  .sops.yaml  README.md  biome.jsonc  bootstrap-environment.sh  bun.lockb  deeplinkexample  devenv.nix  devenv.yaml  flerm.nix  latest.json
.github/: CODEOWNERS
.github/actions/run-in-devenv/: action.yml
.github/workflows/: ci.yml  ciyml  pr-check.yml  release.yml
assets/: MacOS Icon.afdesign  dirt-loader-icon.afdesign  icon.afdesign
devenv/: flake.nix
devenv/outputs/: default.nix  frontend.nix
devenv/outputs/builds/: aarch64.nix  default.nix
encrypted/: apple-signing.sops.json  root-key.sops.json  tauri-updater.sops.json
signatures/: Dirtywave Updater.app.tar.gz.sig
src-quasar/: README.md  bun.lockb  bun.nix  eslint.config.js  package.json  quasar.config.ts  vitest.config.mts
src-quasar/src/boot/: errors.ts  i18n.ts  tauri.ts
src-quasar/src/components/: AuxiliaryPage.vue  BasicLabel.vue  ChangelogLine.vue  ChangelogSectionContent.vue  ChromeBar.vue  ColorText.vue  DragDropIndicator.vue  FileUploader.vue  FlashingSection.vue  LineToken.vue  LocalFileSelectItem.vue  SelectedVersion.vue  SettingsButton.vue  SettingsPage.vue  TitleBar.vue  TroubleshootingContent.vue  TroubleshootingPage.vue  TycmdLog.vue  UploadFirmwareButton.vue  VersionList.vue  VersionListItem.vue  VersionNumber.vue
src-quasar/src/composables/: index.ts  use-auxiliary-views.ts  use-category-color.ts  use-custom-firmware-handler.ts  use-distance-to-elements.ts  use-drag-drop-listener.ts  use-firmware-list.ts  use-pick-custom-firmware.ts
src-quasar/src/composables/controllers/: use-device-state-controller.ts  use-devices-controller.ts  use-firmware-controller.ts  use-installation-controller.ts
src-quasar/src/css/: app.scss  quasar.variables.scss
src-quasar/src/layouts/: MainLayout.vue
src-quasar/src/pages/: ErrorNotFound.vue  IndexPage.vue
src-quasar/src/router/: index.ts
src-quasar/src/stores/: firmware.ts  index.ts  installation.ts  serial-port-info.ts
src-quasar/src/types/: events.ts  firmware.ts  index.ts  installation.ts
src-quasar/src/utils/: changelog.ts  filename-parsing.ts  index.ts  serial.ts  text.ts  url.ts
src-tauri/: Cargo.toml  bun.lockb  devenv.yaml  latest.json  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/binaries/: tycmd-x86_64-apple-darwin
src-tauri/capabilities/: default.json  draggable-window.json  pinia.json  tycmd.json
src-tauri/icons/: icon.icns
src-tauri/src/: events.rs  firmware.rs  lib.rs  main.rs  serial.rs  state.rs  updater.rs
src-tauri/src/events/: frontend_events.rs
src-tauri/src/serial/: device.rs  provider.rs  slip.rs  tycmd.rs
(+27 files in other folders)
