[package]
authors = ["you"]
description = "A Tauri App"
edition = "2021"
name = "dirtywave-updater"
version = "0.2.9"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
crate-type = ["staticlib", "cdylib", "rlib"]
name = "dirtywave_updater_lib"

[build-dependencies]
tauri-build = {version = "2.4.1", features = [] }

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.42"
futures-util = "0.3.31"
log = "0.4.28"
regex = "1.11.2"
reqwest = {version = "0.12.23", features = ["stream"] }
serde = {version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
serialport = {version = "4.7.3", features = ["serde"] }
tauri = {version = "2.8.5", features = [] } #, features = ["tracing"] }
tauri-cli = "2.8.4"
tauri-plugin-deep-link = "2"
tauri-plugin-devtools = "2.0.1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2.4.2"
tauri-plugin-log = "2.7.0"
tauri-plugin-opener = "2.5.0"
tauri-plugin-pinia = "4.0.1"
tauri-plugin-shell = "2.3.1"
tauri-plugin-store = "2.4.0"
thiserror = "2.0.16"
tokio = "1.47.1"
# tracing = {version = "0.1.41", features = ["async-await"] }
# tracing-subscriber = "0.3.19"
# zip = "4.5.0"
zip = { version = "4.5.0", default-features = false, features = ["deflate", "bzip2"] }

# TODO: Docs say to use this target, which seems roughly equivalent:
# cfg(any(target_os = "macos", windows, target_os = "linux"))
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2.3.4"
tauri-plugin-updater = "2.9.0"
tauri-plugin-window-state = "2.4.0"

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26.1"

# https://github.com/jhpratt/deranged/issues/18
# [patch.crates-io]
# deranged = {git = "https://github.com/jhpratt/deranged", rev = "3c95431a375bca409a4731ae8749acc84e076267"}
# Patch lzma-sys to use liblzma-sys from the correct repository
# lzma-sys = { git = "https://github.com/gyscos/zstd-rs", package = "liblzma-sys", version = "0.4.4" }
